--- a/src/content/graphos/basics/graphs/management.mdx
+++ b/src/content/graphos/basics/graphs/management.mdx
@@ -1,5 +1,5 @@
 ---
-title: Managing graphs in GraphOS Studio
+title: Graph management in GraphOS
 ---
 
 ## Creating graphs
@@ -19,7 +19,7 @@ You can enable public access for individual variants of your graph. If you do, a
 - Explorer
   - You can also [embed the Explorer](../explorer/embed-explorer/) on your own webpage.
 
-This enables consumers of your graph to learn about your graph's schema and any special usage information (such as authentication details) that you've documented in [the public variant's README](#the-readme-page). They can also run properly authenticated operations against your graph with the Explorer.
+This enables consumers of your graph to learn about your graph's schema and any special usage information (such as authentication details) that you've documented in [the public variant's README](./studio-features/#the-readme-page). They can also run properly authenticated operations against your graph with the Explorer.
 
 People outside your organization can't view any other pages for a public variant (Fields, Operations, etc.), and they can never view any pages for private variants. New variants always start as private.
 
