--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -356,7 +356,7 @@ We recommend that you create a separate API key for each system that communicate
 
     If you have an Enterprise plan, set the API key's role according to the following:
 
-    - If your router will use a [protected variant](../graphs/studio-features/#protected-variants-enterprise-only), choose **Graph Admin**.
+    - If your router will use a [protected variant](../graphs/management/#public-variants), choose **Graph Admin**.
     - Otherwise, choose **Contributor**.
 
     <Tip>
