--- a/src/content/graphos/delivery/contracts.mdx
+++ b/src/content/graphos/delivery/contracts.mdx
@@ -108,7 +108,7 @@ Any `@tag` in a source variant's supergraph schema is also present in a contract
 
 ### Contract documentation
 
-In GraphOS Studio, each contract variant has its own README, schema reference, and Explorer. If you [make a contract variant public](../graphs/studio-features/#public-variants), you can provide these resources to external client developers to help them interact with a specific portion of your graph while omitting irrelevant types and fields.
+In GraphOS Studio, each contract variant has its own README, schema reference, and Explorer. If you [make a contract variant public](../graphs/management/#public-variants), you can provide these resources to external client developers to help them interact with a specific portion of your graph while omitting irrelevant types and fields.
 
 ## Federation 1 limitations
 
