--- a/src/content/graphos/explorer/operation-collections.mdx
+++ b/src/content/graphos/explorer/operation-collections.mdx
@@ -149,7 +149,7 @@ Each graph variant in Studio has a [README page](../graphs/studio-features/#the-
 
 ### Public collections
 
-If you create a [public variant](../graphs/studio-features/#public-variants) of your graph, any shared collections for that variant are visible to everyone, not just members of your organization. Anonymous users can view and execute operations in a public collection, but they can't make any changes to the collection.
+If you create a [public variant](../graphs/management/#public-variants) of your graph, any shared collections for that variant are visible to everyone, not just members of your organization. Anonymous users can view and execute operations in a public collection, but they can't make any changes to the collection.
 
 ## Sandbox collections
 
