--- a/src/content/technotes/TN0021-graph-security.mdx
+++ b/src/content/technotes/TN0021-graph-security.mdx
@@ -222,7 +222,7 @@ Additionally, tracing data in GraphOS can help you monitor API performance and e
 
 You should manage internal access to your supergraph as thoughtfully as you manage communication from external clients. GraphOS provides both [graph API keys and personal API keys](/graphos/api-keys/) to restrict access to the graphs within an organization. It also supports SSO integration and different [member roles](/graphos/org/members/#organization-wide-member-roles) so that team members can be assigned appropriate permissions when contributing the graph.
 
-Beyond member roles, GraphOS also allows certain variants to be designated as [protected variants](/graphos/graphs/studio-features/#protected-variants-enterprise-only) to further restrict who can make changes to their schemas, which is especially important in production environments.
+Beyond member roles, GraphOS also allows certain variants to be designated as [protected variants](/graphos/graphs/management/#public-variants) to further restrict who can make changes to their schemas, which is especially important in production environments.
 
 ## Additional resources
 
