--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -286,7 +286,7 @@ On the top of the page, you can:
 - Click the double arrow to collapse or expand a searchable list of **Types**.
 - Click **Show Filters** to filter your visualization by root type, subgraph, or tag.
 - Click the **Highlight** dropdown to select particular types, tags, or directives to highlight.
-  - Highlighting **Unused** types, **Errors**, **Usage*, or **Latency**, the visualization displays a heatmap whose **Time range** you can adjust in the bottom right of the screen.
+  - Highlighting **Unused** types, **Errors**, **Usage**, or **Latency**, the visualization displays a heatmap whose **Time range** you can adjust in the bottom right of the screen.
 
     <img
       src="../../img/schema-visualization-heatmap.png"
