--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -1,7 +1,7 @@
 ---
 title: Graph exploration
 subtitle: Explore and visualize your graph's types, fields, and relationships
-description: Enhance GraphQL schema comprehension and design with Apollo GraphOS Studio, including the schema visualization, the Explorer, and schema changelog. 
+description: Enhance GraphQL schema comprehension and design with Apollo GraphOS Studio, including schema visualization, the Explorer, and schema changelog. 
 ---
 
 As your graph grows, understanding its structure can become more difficult.
