--- a/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
+++ b/src/content/technotes/TN0012-namespacing-by-separation-of-concern.mdx
@@ -11,7 +11,7 @@ Most GraphQL APIs provide their capabilities as root-level fields of the `Query`
 
 <Note>
 
-Make sure to read the [Caveats](#Caveats) section below. While the name spacing pattern works well for queries, mutations can have side-effects that may not be inline with the GraphQL spec.
+Make sure to read the [Caveats](#caveats) section below. While the name spacing pattern works well for queries, mutations can have side-effects that may not be inline with the GraphQL spec.
 
 </Note>
 
