--- a/src/content/graphos/cloud-routing/dedicated/index.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/index.mdx
@@ -49,4 +49,4 @@ Please note the following while Cloud Dedicated is in preview:
 - 99.9% SLA for ingress traffic
 - Limited to customers running subgraphs in AWS
 - Month-to-month billing, pricing subject to change
-- Limited scaling up to 10 x GCUs
+- Limited scaling, up to 10 GCUs per variant
