--- a/src/content/graphos/cloud-routing/index.mdx
+++ b/src/content/graphos/cloud-routing/index.mdx
@@ -106,9 +106,9 @@ Apollo automatically deletes variants of Serverless cloud supergraphs that recei
 
 ## Limited compute on Serverless
 
-Serverless has limited underlying compute resources and certain types of workloads may require you upgrade to Dedicated. Serverless capacity may be exhausted in the following circumstances:
-- Complex schemas may exceed available machine memory for Serverless cloud routers. For example, Serverless cloud routers don't support schemas with over 1,000 input types.
-- Processing too many simulatenous requests may cause your cloud router to error and return 429 errors to your clients.
+Serverless has limited underlying compute resources, so certain types of workloads might require you to upgrade to Dedicated. Serverless capacity can be exhausted in the following circumstances:
+- **Complex schemas** can exceed available machine memory for Serverless cloud routers. For example, Serverless cloud routers don't support schemas with over 1,000 input types.
+- **Too many simultaneous requests** can cause your Serverless cloud router to return `429` errors to your clients.
 
 You can upgrade to Dedicated for control over scaling and performance. <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">Contact Sales</TrackableLink> for a free trial.
 
