Apply suggestions from code review
Co-authored-by: Edward Huang <edward.huang@apollographql.com>

--- a/src/content/graphos/basics/graphs/management.mdx
+++ b/src/content/graphos/basics/graphs/management.mdx
@@ -5,7 +5,7 @@ title: Graph management in GraphOS
 ## Creating graphs
 
 - To create a cloud supergraph, see the [GraphOS quickstart](../quickstart/cloud/).
-- To create a non-cloud graph (that is, a self-hosted supergraph or a monograph), see [this section](./#creating-graphs).
+- To create a non-cloud graph (a self-hosted supergraph or a monograph), see [this section](./#creating-graphs).
 
 ## Managing access permissions
 
@@ -93,7 +93,7 @@ by visiting the graph's Settings page in Studio and changing the graph owner.
 
 <Caution>
 
-Deleting a graph cannot be undone!
+Deleting a graph cannot be undone.
 
 If you delete a cloud supergraph, all its GraphOS-hosted routers are deprovisioned.
 
