--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -83,7 +83,7 @@ For a list of all supported shortcodes, click **Graph shortcodes** in the bottom
 
 <!-- vale Apollo.Headings = YES -->
 
-A graph variant's **schema** page has three distinct views:
+A graph variant's **Schema** page has three distinct views:
 
   - The **Reference** tab lets you filter your schema's type and field definitions
   - The **SDL** tab displays your schema's raw SDL
@@ -267,8 +267,8 @@ Regardless of the SDL type you're viewing, you can **Copy** the SDL or download 
 
 ### Schema visualization
 
-The **Visualization** tab provides a clear graphical representation of your schema's structure, including types, fields, and relationships.
-It can help identify potential issues in your data model, allowing for more effective schema design.
+The **Visualization** tab provides a graphical representation of your schema's structure, including types, fields, and relationships.
+It can help clarify your understanding of your schema's design, so you can more easily identify potential issues and improve your data model.
 
 <img
   src="../../img/schema-visualization.png"
@@ -276,11 +276,11 @@ It can help identify potential issues in your data model, allowing for more effe
   alt="Schema visualization in Studio"
 />
 
-The bottom of the visualization has buttons for:
-- Zooming in and out of the visualization
-- Copying a link to the visualization to share with organization members
-- Downloading an SVG or PNG of the visualization
-- Opening and closing the visualization **Legend**
+Use the buttons on the bottom of the page to:
+- Zoom in and out of the visualization
+- Copy a link to the visualization to share with organization members
+- Download an SVG or PNG of the visualization
+- Open and close the visualization **Legend**
 
 On the top of the page, you can:
 - Click the double arrow to collapse or expand a searchable list of **Types**.
