Correct protected variant anchor link

--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -54,7 +54,7 @@ graph LR
 
 <Note>
 
-For [protected variants](../graphs/management/#public-variants), only organization members with the **Graph Admin** role can create or edit a variant's preflight script.
+For [protected variants](../graphs/management/#protected-variants-enterprise-only), only organization members with the **Graph Admin** role can create or edit a variant's preflight script.
 
 For non-protected variants, members with the **Contributor** role can also modify the preflight script.
 
