--- a/src/content/graphos/org/members.mdx
+++ b/src/content/graphos/org/members.mdx
@@ -8,15 +8,15 @@ A GraphOS [organization](./) can have any number of members, and each member can
 
 Each organization member has one of the following roles:
 
-| Name                | Description                                                                                                                                                                                                                                                                                                                   | Supported [plan types](https://www.apollographql.com/pricing/) |
-| ------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
-| **Org Admin**       | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                           |                              All                               |
-| **Graph Admin**     | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                                   |                        Enterprise only                         |
-| **Contributor**     | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for backend developers who are authorized to make changes to graphs. Cannot push schema changes to [protected variants](../graphs/management/#public-variants).                                       |                        Enterprise only                         |
-| **Documenter**      | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                         |                        Enterprise only                         |
+| Name                | Description                                                                                                                                                                                                                                                                                                                 | Supported [plan types](https://www.apollographql.com/pricing/) |
+| ------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | :------------------------------------------------------------: |
+| **Org Admin**       | Has management access to the entire organization, including its members, graphs, and configuration.                                                                                                                                                                                                                         |                              All                               |
+| **Graph Admin**     | Has management access to the organization's graphs, but not to members or organization-level configuration. Intended for developers who are considered admins to the graph.                                                                                                                                                 |                        Enterprise only                         |
+| **Contributor**     | Can push new schemas to graphs, but cannot configure graph settings or integrations. Intended for backend developers who are authorized to make changes to graphs. Cannot push schema changes to [protected variants](../graphs/management/#protected-variants-enterprise-only).                                            |                        Enterprise only                         |
+| **Documenter**      | Has all permissions of the Observer role, plus the ability to edit graph READMEs, descriptions, and similar non-operational metadata.                                                                                                                                                                                       |                        Enterprise only                         |
 | **Observer**        | Has view-only access to the organization's graph data, such as schemas and metrics. Can also execute queries in the Explorer. Intended for backend developers who are not authorized to make changes to graphs.                                                                                                             |                        Enterprise only                         |
 | **Consumer**        | <p>Has view-only access to the organization's graph schemas, but not metrics. Can also execute queries in the Explorer. Intended for application developers building clients against a graph.</p><p>This role is available to all plan types. For legacy Team plans, **Consumer** members do not count as billed users.</p> |                              All                               |
-| **Billing Manager** | <p>Has management access to organization-level configuration and billing. Can also remove members (but not invite them). No access to graphs. [Learn more](#billing-managers)</p><p>This role is available to all paid plan types. For legacy Team plans, **Billing Manager** members do not count as billed users.</p>       |                      All paid plan types                       |
+| **Billing Manager** | <p>Has management access to organization-level configuration and billing. Can also remove members (but not invite them). No access to graphs. [Learn more](#billing-managers)</p><p>This role is available to all paid plan types. For legacy Team plans, **Billing Manager** members do not count as billed users.</p>     |                      All paid plan types                       |
 
 Only members with the **Org Admin** role can assign roles to other members. You can see which role you have in a particular organization from your [user settings page](https://studio.apollographql.com/user-settings), or from the organization's Members tab.
 
@@ -60,20 +60,20 @@ When **Contributor**s in an organization create a new graph, they are automatica
 
 ### Graph management permissions
 
-| Action                                           | Org Admin | Graph Admin |                                         Contributor                                          | Observer / Documenter | Consumer |
-| :----------------------------------------------- | :-------: | :---------: | :------------------------------------------------------------------------------------------: | :-------------------: | :------: |
-| View and manage graph API keys                   |     ✓     |      ✓      |                                                                                              |                       |          |
-| Manage graph integrations (Slack, Datadog, etc.) |     ✓     |      ✓      |                                                                                              |                       |          |
-| Delete and rename graphs                         |     ✓     |      ✓      |                                                                                              |                       |          |
-| Create graphs                                    |     ✓     |      ✓      |                                              ✓                                               |                       |          |
-| Create new variants                              |     ✓     |      ✓      | Non-[protected](../graphs/management/#public-variants) variants only |                       |          |
-| Push schemas to a graph                          |     ✓     |      ✓      | Non-[protected](../graphs/management/#public-variants) variants only |                       |          |
-| Manage Explorer settings (URL, etc)              |     ✓     |      ✓      | Non-[protected](../graphs/management/#public-variants) variants only |                       |          |
-| See the schemas of subgraphs in federated graphs |     ✓     |      ✓      |                                              ✓                                               |           ✓           |          |
-| View graph usage metrics and traces <sup>1</sup> |     ✓     |      ✓      |                                              ✓                                               |           ✓           |          |
-| Edit variant READMEs                             |     ✓     |      ✓      |                                              ✓                                               |    Documenter only    |          |
-| Query graphs with the Explorer                   |     ✓     |      ✓      |                                              ✓                                               |           ✓           |    ✓     |
-| View graph schemas and changelogs                |     ✓     |      ✓      |                                              ✓                                               |           ✓           |    ✓     |
+| Action                                           | Org Admin | Graph Admin |                                       Contributor                                       | Observer / Documenter | Consumer |
+| :----------------------------------------------- | :-------: | :---------: | :-------------------------------------------------------------------------------------: | :-------------------: | :------: |
+| View and manage graph API keys                   |     ✓     |      ✓      |                                                                                         |                       |          |
+| Manage graph integrations (Slack, Datadog, etc.) |     ✓     |      ✓      |                                                                                         |                       |          |
+| Delete and rename graphs                         |     ✓     |      ✓      |                                                                                         |                       |          |
+| Create graphs                                    |     ✓     |      ✓      |                                            ✓                                            |                       |          |
+| Create new variants                              |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
+| Push schemas to a graph                          |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
+| Manage Explorer settings (URL, etc)              |     ✓     |      ✓      | Non-[protected](../graphs/management/#protected-variants-enterprise-only) variants only |                       |          |
+| See the schemas of subgraphs in federated graphs |     ✓     |      ✓      |                                            ✓                                            |           ✓           |          |
+| View graph usage metrics and traces <sup>1</sup> |     ✓     |      ✓      |                                            ✓                                            |           ✓           |          |
+| Edit variant READMEs                             |     ✓     |      ✓      |                                            ✓                                            |    Documenter only    |          |
+| Query graphs with the Explorer                   |     ✓     |      ✓      |                                            ✓                                            |           ✓           |    ✓     |
+| View graph schemas and changelogs                |     ✓     |      ✓      |                                            ✓                                            |           ✓           |    ✓     |
 
 <blockquote>
 
