--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -259,7 +259,7 @@ From this page, you can:
 
 <Note>
 
-Organization members with the [**Consumer** role](../org/members#organization-wide-member-roles) can only view the API schema. **Observers**, **Documenters**, **Contributors**, **Graph Admins**, and **Org Admins** can see all schema types.
+Organization members with the [**Consumer** role](../org/members#organization-wide-member-roles) can only view the API schema. **Observers**, **Documenters**, **Contributors**, **Graph Admins**, and **Org Admins** can view all schema types.
 
 </Note>
 
