Clarify that Consumers only have access to API Schema (#801)
* Update members.mdx

* Remove redundant Tip and add Note on roles

* Be explicit about schemas a consumer can view

* Add "Documentors" to acceptable words

* Wording tweak

* Standardize fontsize in table

---------

Co-authored-by: Maria Elisabeth Schreiber <maria.schreiber@apollographql.com>

--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -247,13 +247,7 @@ If you're using [the `@contact` directive](#contact-info-for-subgraphs) to speci
 
 ## Viewing subgraph SDL
 
-The **Schema > SDL** page in Studio displays the raw SDL for each type of schema associated with your supergraph (API schema, supergraph schema, and subgraph schemas).
-
-<Tip>
-
-[Learn about the different types of federated schemas.](/federation/federated-types/overview/)
-
-</Tip>
+The **Schema > SDL** page in Studio displays the raw SDL for each schema type associated with your supergraph—an API schema, a supergraph schema, and subgraph schemas.
 
 From this page, you can:
 
@@ -262,6 +256,12 @@ From this page, you can:
 - Search for types and fields
 - Download a copy of your subgraph's SDL for local development
 - Filter out comments and deprecated fields for improved scanning
+
+<Note>
+
+Organization members with the [**Consumer** role](../org/members#organization-wide-member-roles) can only view the API schema. **Observers**, **Documenters**, **Contributors**, **Graph Admins**, and **Org Admins** can view all schema types.
+
+</Note>
 
 ## Contact info for subgraphs
 
