--- a/src/content/technotes/TN0047-using-http-subscriptions-api-gateway.mdx
+++ b/src/content/technotes/TN0047-using-http-subscriptions-api-gateway.mdx
@@ -73,3 +73,27 @@ To enable HTTP subscriptions, the `response.streaming.enabled` property should b
 For more information, see [Streaming requests and responses in the Apigee documentation](https://cloud.google.com/apigee/docs/api-platform/develop/enabling-streaming?hl=en).
 
 </Note>
+
+## Mulesoft
+
+### Flex-gateway
+
+Streaming of HTTP multipart is supported out of the box with no additional configuration required.
+
+### Proxy
+
+...
+
+## Kong
+
+Streaming of HTTP multipart is supported out of the box with no additional configuration required.
+
+## AWS API Gateway
+
+At this time, AWS API Gateway does not support streaming of HTTP data. An possible workaround is to use a Lambda expression which does support streaming.
+
+<Note>
+
+For more information, see [AWS Lambda response streaming](https://aws.amazon.com/blogs/compute/introducing-aws-lambda-response-streaming/).
+
+</Note>
