Remove Markdown links

--- a/src/content/graphos/delivery/schema-proposals/creation.mdx
+++ b/src/content/graphos/delivery/schema-proposals/creation.mdx
@@ -64,7 +64,7 @@ Follow the steps below to create a new proposal:
 
    </Tip>
 
-4. Optionally, enter the rationale for the proposed changes. This rationale appears as your proposal's **Description** on the proposal's overview and gives collaborators and reviewers context for the proposed changes. This input accepts [Markdown](https://www.markdownguide.org/getting-started/).
+4. Optionally, enter the rationale for the proposed changes. This rationale appears as your proposal's **Description** on the proposal's overview and gives collaborators and reviewers context for the proposed changes. This input accepts Markdown.
 
     <Note>
 
@@ -128,7 +128,7 @@ Once you've made changes in the editor, rerun the linter by clicking the rerun b
 ### Save revisions
 
 Once you've made changes, click the **Save Revision** button in the bottom left of the editor to save them.
-A dialog appears where you can optionally include a summary of your changes. This input accepts [Markdown](https://www.markdownguide.org/getting-started/).
+A dialog appears where you can optionally include a summary of your changes. This input accepts Markdown.
 
 <img
   src="../../img/schema-proposals/save-revision.jpg"
