--- a/src/content/graphos/delivery/schema-proposals/configuration.mdx
+++ b/src/content/graphos/delivery/schema-proposals/configuration.mdx
@@ -152,7 +152,7 @@ Once you've added [**default reviewers**](#default-reviewers), you can require a
 
 When you [create a proposal](./creation#start-a-proposal), you can optionally include a description that appears on the proposal's **Overview** tab. Proposal descriptions support Markdown.
 
-Configuring a graph's description template prepopulates the description for every new proposal any team member creates for the graph. Templates can help ensure that all proposal descriptions follow a particular format.
+Setting a graph's **Description template** prepopulates the description for every new proposal any team member creates for the graph. Templates can help ensure that all proposal descriptions follow a particular format.
 
 <img
   src="../../img/schema-proposals/proposal-description-template.jpg"
